--- a/[bai-tap]-xay-dung-ung-dung-quan-ly-nhan-vien---crud/views/employee/create.ejs
+++ b/[bai-tap]-xay-dung-ung-dung-quan-ly-nhan-vien---crud/views/employee/create.ejs
@@ -1,5 +1,5 @@
 <h1 class="mt-3">Add new employee</h1>
-<form method="POST" action="">
+<form method="POST" action=""  enctype="multipart/form-data">
     <div class="form-group">
         <label for="exampleInputEmail1">Name</label>
         <input type="text" class="form-control" id="exampleInputEmail1" name="name" placeholder="Enter name">
@@ -8,6 +8,14 @@
         <label for="exampleInputPassword1">Department</label>
         <input type="text" class="form-control" id="exampleInputPassword1" name="department" placeholder="Enter Department">
     </div>
+
+    <div class="form-group">
+        <div>
+            <label for="exampleInputFile">Avatar</label>
+            <input type="file" id="exampleInputFile" name="avatar" class="form-control" >
+        </div>
+    </div>
+
 
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
